k8s/07-alb-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  controller: ingress.alb.yc.io/yc-alb-ingress-controller
