k8s/06-backend-lb-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-lb
  namespace: devops
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
