k8s/09-grafana-alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-alb
  namespace: monitoring
  annotations:
    ingress.alb.yc.io/group-name: devops-alb
    ingress.alb.yc.io/subnets: e9b8v4rv4fpps8pg74j5
    ingress.alb.yc.io/security-groups: enp2f3cj639agvhr9hv9
    ingress.alb.yc.io/external-ipv4-address: auto
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
